syntax = "proto3";

option java_package = "grpc";

/* Entidad */
message UserDto {
  int32 idUser = 1;
  string name = 2;
  string email = 3;
  string username = 4;
  string password = 5;
}

/* Definicion de Procedimientos Remotos */
service UserService{

  rpc addUser (UserDto) returns (ServerResponseUser);
  rpc getAllUsers (EmptyUser) returns (AllUsersResponse);

}

/* Respuesta del servidor*/
message ServerResponseUser {
  int32 idUser = 1;
  string message = 2;
}

message EmptyUser {}

message AllUsersResponse {
  repeated UserDto users = 1;
}