syntax = "proto3";

option java_package = "grpc";

/* Entidad */
message RecipeDto {
  int32 idRecipe = 1;
  string title = 2;
  string description = 3;
  string ingredients = 4;
  string category = 5;
  string steps = 6;
  int32 preparationTime = 7;
}

/* Definicion de Procedimientos Remotos */
service RecipeService {

  rpc getRecipeById (getRecipeByIdRequest) returns (RecipeDto);
  rpc editRecipe (RecipeDto) returns (ServerResponseRecipe);
}

/* Respuesta del servidor */
message ServerResponse {
  string message = 1;
}

message Empty {}

// Mensaje de solicitud para getRecipeById
message getRecipeByIdRequest {
  int32 idRecipe = 1;
}

message ServerResponseRecipe {
  string message = 1;
}
